test/hotCases/invalidate/during-idle/module.js
import * as a from "./a";
import * as b from "./b";
import * as c from "./c";

export { a, b, c };

module.hot.accept(["./a", "./b", "./c"]);
